--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     defaultConfig {
         multiDexEnabled true
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.beardedhen:androidbootstrap:2.3.2'
     implementation 'me.rishabhkhanna:CustomToggle:1.0.0'
     implementation 'com.nex3z:toggle-button-group:1.1.2'
-
+    implementation 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
